[package]
name = "scener"
version = "0.1.0"
edition = "2021"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]

[dependencies]
anyhow = "1.0.71"
arboard = { version = "3.4.0", optional = true, default-features = false }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.3", features = ["derive"] }
duct = "0.13.6"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.6.0"
xdg = "2.5.0"

[dev-dependencies]
indoc = "2.0.5"
rstest = "0.19.0"
